# signal-noise

./: .gitignore  AGENTS.md  Agents.md  Cargo.toml  Dioxus.toml  Makefile  article_draft.md
.claude/skills/diagnose-why-work-stopped/: .paperclip-materialized-skill.json
.claude/skills/paperclip/: .paperclip-materialized-skill.json
.claude/skills/paperclip-create-plugin/: .paperclip-materialized-skill.json
.claude/skills/terminal-bench-loop/: .paperclip-materialized-skill.json
.github/workflows/: deploy-seed.yml  deploy.yml  verify-the189-bearer-acceptance.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/cache/eslint/: .cache_51384
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.html  _not-found.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 551.js  796.js  935.js
.next/server/pages/: 500.html  _error.js
.next/static/aVl-ym8112Hv3sxBHoQBe/: _buildManifest.js
.next/static/chunks/: main-app-03f2fce5f4bc1b6c.js
.next/static/css/: 989277c9792538c4.css
.next/types/: routes.d.ts  validator.ts
.next/types/app/: layout.ts  page.ts
agents/ai-culture-reporter/: AGENTS.md
agents/ai-policy-reporter/: AGENTS.md
agents/article-verifier/: AGENTS.md
agents/ceo/: AGENTS.md
agents/ceo/life/: index.md
agents/ceo/memory/: 2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-27.md
agents/editor-in-chief/: AGENTS.md
agents/fact-checker/: AGENTS.md
agents/founding-engineer/: AGENTS.md
agents/frontend-engineer/: AGENTS.md
agents/grok-design-critic/: AGENTS.md
agents/grok-engineer/: AGENTS.md
agents/grok-reporter/: AGENTS.md
agents/reporter/: AGENTS.md
agents/scanner/: AGENTS.md  discover.sh  published_dedupe.py  scan.sh  scanner.py  scanner.sh  test_arc_g3_backtest.py  test_published_dedupe.py  test_scanner_integration.py
assets/: tailwind.css
config/: feeds.toml
db/: schema.surql
deploy/: Caddyfile  ainory-times.service  scanner.service  scanner.timer
docs/: DEPLOY.md  GOVERNANCE.md  SCANNER.md  ai-news-concept(1).html  airony-times-logo-concepts.md  signal-noise-concept-v2.html
docs/drafts/: the-116-greg-kh-rust-developers.md  the-118-vim-gtk4-claude.md  the-120-intuit-ai-layoffs.md  the-122-cisa-github-leak.md  the-124-orf-cookie-banner.md  the-133-opensuse-age-terms.md  the-134-ai-labs-midterms.md  the-136-anthropic-spacex-colossus-gb200.md  the-138-edri-led-fragmented.md  the-282-uk-digital-id-burnham.md
docs/published/age-verification-mandates-new-breach-surface/: publish.json
docs/published/amd-radeon-rx-9070-gre-ryzen-ai-max-pro-400-computex-2026/: publish.json
docs/published/anthropic-spacex-colossus-lease-musk-s1-dispute/: publish.json
docs/published/apple-siri-redesign-ios-27-leaked/: publish.json
docs/published/arm-opens-up-metis-ai-security-scanner/: publish.json
docs/published/avrea-stealth-exit-47m-ai-cicd/: publish.json
docs/published/bambu-studio-agpl-violations-sfc-investigation/: publish.json
docs/published/blue-origin-new-glenn-destroyed-static-fire/: publish.json
docs/published/h2h-2/: 00-editors-note.md  LAYOUT-SPEC.md  (+2 more)
docs/reviews/: grok-design-critic-sig12-review.md
docs/seed-status/: last-run.md  the159-acceptance.md
ops/: accept.txt  deploy.txt  probe.txt  render.on  seed.txt  verify.txt
paperclip/: backup.json
scripts/: DEPLOY-SEED-RUNBOOK.md  autopublish-host.sh  autopublish.sh  capture_evidence.mjs  deploy.sh  inspect.sh  provision.sh  redeploy-host.sh  republish_articles.py  rollback.sh  seed-live.sh  seed.sh
src/: config.rs  gnews.rs  lib.rs  main.rs  scanner.rs  server_fns.rs  util.rs
src/api/: auth.rs  db.rs  mod.rs  rate_limit.rs  routes.rs
src/components/: agent_roster.rs  article_card.rs  confidence_meter.rs  mod.rs  nav.rs  pipeline_trail.rs  section_nav.rs  source_block.rs  transparency_hud.rs
src/models/: article.rs  category.rs  mod.rs  persona.rs  pipeline_step.rs  source.rs
src/pages/: about.rs  article.rs  beat.rs  h2h.rs  head2head.rs  home.rs  mod.rs  rejections.rs
src/styles/: tailwind.css
(+253 files in other folders)
