[package]
name = "signal-noise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signal-noise"
path = "src/main.rs"

[[bin]]
name = "scanner"
path = "src/bin/scanner.rs"

[dependencies]
# Dioxus fullstack (Axum backend + WASM frontend)
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
dioxus-fullstack = "0.7.3"
axum = "0.8"

# SurrealDB embedded (Rust SDK, no server process)
surrealdb = { version = "3", features = ["kv-surrealkv"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# RSS/Feed parsing
feed-rs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
strsim = "0.11"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dioxus-fullstack/server"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

# WASM target optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"
